# KestrelGL

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  main.cpp  vcpkg.json
assets/models/tibetan-amoghasiddhi-buddha-13th-c-ce/source/: mia_031182_Amoghasiddhi_64k.mtl
assets/models/tibetan-hayagriva-18th-c-ce/source/: 190614_mia337_132174_402_local_64Kmesh_OBJ.mtl
include/: camera.h  camera.hpp  eventbus.h  logger.h  mesh.hpp  model.hpp  shader.h  shader.hpp  shader_old.h  stb_image.h
src/: App.cpp  App.h  App.hpp  Camera.cpp  Camera.h  Entity.cpp  Entity.h  EventTypes.h  Gui.cpp  Gui.h  Gui.hpp  Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h  ModelLoader_old.cpp  ModelLoader_old.h  Object.cpp  Object.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Skybox.cpp  Skybox.h  Skybox.hpp  debug.cpp  debug.h  main.cpp  shader.h
src/components/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.h  Shader.h  Texture.cpp  Texture.h  Transform.h
src/gui/: Gui.cpp  Gui.hpp
src/lights/: DirectionalLight.h  Light.h  PointLight.h
src/old/: App.cpp  Gui.cpp  Gui.hpp  ModelLoader.cpp  ModelLoader.h  Skybox.cpp
src/old/shaders/: cubemap.vert  equirect_to_cube.frag  irradiance_sh.frag  model.frag  model.vert
src/shaders/: depth.frag  equi_to_cube.frag  equi_to_cube.vert  fragment.glsl  irradiance_convolution.frag  irradiance_cv.frag  irradiance_sh.frag  model.frag  model.vert  model_notex.frag  model_old.frag  model_pbr.frag  model_pbr_v2.frag  model_phong.frag  prefilter.frag  prefilter.vert  skybox.frag  vertex.glsl
src_oop/: Camera.h  Gui.cpp  Gui.h  ModelLoader.cpp  Renderer.cpp  Scene.h  Skybox.h  debug.cpp
src_oop/components/: Shader.h
src_oop/lights/: Light.h
src_oop/shaders/: brdf.frag  brdf.vert  depth.vert  model.frag  model_phong.frag  prefilter.frag  skybox.vert
